set(HEADER_CELL "${game_SOURCE_DIR}/include/cell.hpp")
set(HEADER_AMORAL "${game_SOURCE_DIR}/include/amoral.hpp")
set(HEADER_FIELD "${game_SOURCE_DIR}/include/field.hpp")
set(HEADER_IMM_AM "${game_SOURCE_DIR}/include/immortal_amoral.hpp")
set(HEADER_IMM_MO "${game_SOURCE_DIR}/include/immortal_moral.hpp")
set(HEADER_IMM "${game_SOURCE_DIR}/include/immortal.hpp")
set(HEADER_INTER "${game_SOURCE_DIR}/include/interface.hpp")
set(HEADER_LORD "${game_SOURCE_DIR}/include/lord.hpp")
set(HEADER_LAND "${game_SOURCE_DIR}/include/landscape.hpp")
set(HEADER_MORAL "${game_SOURCE_DIR}/include/moral.hpp")
set(HEADER_SCHOOL "${game_SOURCE_DIR}/include/school.hpp")
set(HEADER_SKILL "${game_SOURCE_DIR}/include/skill.hpp")
set(HEADER_SQUAD "${game_SOURCE_DIR}/include/squad.hpp")
set(HEADER_UNIT "${game_SOURCE_DIR}/include/unit.hpp")
set(HEADER_KDTREE "${game_SOURCE_DIR}/include/kdtree.hpp")

add_library(cell cell.cpp ${HEADER_CELL})
add_library(amoral amoral.cpp ${HEADER_AMORAL})
add_library(field field.cpp ${HEADER_FIELD})
add_library(immortal_amoral immortal_amoral.cpp ${HEADER_IMM_AM})
add_library(immortal_moral immortal_moral.cpp ${HEADER_IMM_MO})
add_library(immortal immortal.cpp ${HEADER_IMM})
add_library(interface interface.cpp ${HEADER_INTER})
add_library(lord lord.cpp ${HEADER_LORD})
add_library(landscape landscape.cpp ${HEADER_LAND})
add_library(moral moral.cpp ${HEADER_MORAL})
add_library(school school.cpp ${HEADER_SCHOOL})
add_library(skill skill.cpp ${HEADER_SKILL})
add_library(squad squad.cpp ${HEADER_SQUAD})
add_library(unit unit.cpp ${HEADER_UNIT})
add_library(kdtree kdtree.cpp ${HEADER_KDTREE})

target_include_directories(cell PUBLIC ../include)
target_include_directories(amoral PUBLIC ../include)
target_include_directories(field PUBLIC ../include)
target_include_directories(immortal_amoral PUBLIC ../include)
target_include_directories(immortal_moral PUBLIC ../include)
target_include_directories(immortal PUBLIC ../include)
target_include_directories(interface PUBLIC ../include)
target_include_directories(lord PUBLIC ../include)
target_include_directories(landscape PUBLIC ../include)
target_include_directories(moral PUBLIC ../include)
target_include_directories(school PUBLIC ../include)
target_include_directories(skill PUBLIC ../include)
target_include_directories(squad PUBLIC ../include)
target_include_directories(unit PUBLIC ../include)
target_include_directories(kdtree PUBLIC ../include)